Factor DCP-over-TCP code into own set of files.
This is the first step towards more modular networking code.

Change-Id: I05393dff0cee2c9a996199dd325d3a443b9e5fe2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ bin_PROGRAMS = dcpd
 
 dcpd_SOURCES = \
     dcpd.c os.c os.h registers.h registers_priv.h named_pipe.c named_pipe.h \
+    dcp_over_tcp.c dcp_over_tcp.h \
     network.c network.h \
     transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
