Take shutdown inhibitor lock to delay shutdown.
The only effect of taking an inhibitor lock in this first
proof-of-concept implementation is that shutdown and reboot each take
5 seconds longer than they did before.

DCPD should release the lock as soon as possible upon reception of the
org.freedesktop.login1.Manager.PrepareForShutdown signal to allow the
shutdown sequence to proceed.

Change-Id: Ic6bd2c84acbe2d12523c3cdf8075ef75ebdc1c3a

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,8 @@ EXTRA_DIST += \
     dbus_interfaces/extract_documentation.py \
     dbus_interfaces/de_tahifi_dcpd.xml \
     dbus_interfaces/de_tahifi_filetransfer.xml \
-    dbus_interfaces/net_connman.xml
+    dbus_interfaces/net_connman.xml \
+    dbus_interfaces/org_freedesktop_login1.xml
 
 BUILT_SOURCES = versioninfo.h
 
