Initial proper status register implementation.
Change-Id: I636ee363c5f5a93330f995902467e31ff5ca0c78

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,6 +29,7 @@ dcpd_SOURCES = \
     dcpregs_drcp.h dcpregs_networkconfig.h \
     dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h \
+    dcpregs_status.h \
     connman.c connman.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h dbus_handlers.h
 
@@ -66,6 +67,7 @@ libregisters_la_SOURCES = \
     dcpregs_networkconfig.c dcpregs_networkconfig.h \
     dcpregs_filetransfer.c dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.c dcpregs_tcptunnel.h \
+    dcpregs_status.h \
     dbusdl_dbus.h \
     $(DBUS_IFACES)/de_tahifi_lists_errors.h \
     drcp_command_codes.h messages.h
