Generic shutdown synchronization helper.
The shutdown guard is basically a mutex and a flag.

The flag tells whether or not the system is in the progress of
shutting down.

The mutex protects the flag AND another resource managed by the owner
of the shutdown guard. It synchronizes reading and setting the flag
with the section of code that must complete before the shutdown may
succeed.

Change-Id: I43af291c74f24f1ee82576ca01dc63de37e7919c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,6 +48,7 @@ noinst_LTLIBRARIES = \
     libdrcpdcomm.la \
     libxmodem.la \
     libnetwork_dispatcher.la \
+    libshutdown_guard.la \
     libdbus_handlers.la \
     libdcpd_dbus.la \
     libdbusdl_dbus.la \
@@ -107,6 +108,11 @@ libnetwork_dispatcher_la_SOURCES = \
     network.c network.h \
     messages.h
 libnetwork_dispatcher_la_CFLAGS = $(AM_CFLAGS)
+
+libshutdown_guard_la_SOURCES = \
+    shutdown_guard.c shutdown_guard.h \
+    messages.h
+libshutdown_guard_la_CFLAGS = $(AM_CFLAGS)
 
 BUILT_SOURCES = \
     $(nodist_libdcpd_dbus_la_SOURCES) \
