--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -62,6 +62,7 @@ test_registers_la_SOURCES = \
     mock_expectation.hh
 test_registers_la_LIBADD = \
     $(top_builddir)/src/libregisters.la \
+    $(top_builddir)/src/libshutdown_guard.la \
     $(top_builddir)/src/libdynamic_buffer.la \
     $(top_builddir)/src/libinifile.la \
     $(top_builddir)/src/libxmodem.la
@@ -84,7 +85,11 @@ test_transactions_la_SOURCES = \
     mock_os.hh mock_os.cc \
     mock_messages.hh mock_messages.cc \
     mock_expectation.hh
-test_transactions_la_LIBADD = $(top_builddir)/src/libtransactions.la $(top_builddir)/src/libregisters.la $(top_builddir)/src/libdynamic_buffer.la
+test_transactions_la_LIBADD = \
+    $(top_builddir)/src/libtransactions.la \
+    $(top_builddir)/src/libregisters.la \
+    $(top_builddir)/src/libshutdown_guard.la \
+    $(top_builddir)/src/libdynamic_buffer.la
 test_transactions_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 test_transactions_la_CXXFLAGS = $(AM_CXXFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
 
