--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -27,7 +27,7 @@ AM_TESTS_ENVIRONMENT = CUTTER="$(CUTTER)" XSLTPROC="$(XSLTPROC)" VALGRIND="$(VAL
 
 AM_LDFLAGS = -module -rpath $(libdir) -avoid-version -no-undefined
 
-AM_CPPFLAGS = $(CUTTER_CFLAGS)
+AM_CPPFLAGS = $(CPPCUTTER_CFLAGS)
 AM_CPPFLAGS += -I$(top_srcdir)/src -I$(top_builddir)/src
 AM_CPPFLAGS += -I$(top_srcdir)/dbus_interfaces
 
