Move some helpers in Connman support to own file.
Change-Id: Iff617d9074c21a187656632b9c9d78ff6c869359

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,6 +31,7 @@ dcpd_SOURCES = \
     dcpregs_tcptunnel.h \
     dcpregs_status.h \
     connman.c connman.h \
+    connman_common.c connman_common.h \
     dbus_common.c dbus_common.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h dbus_handlers.h
 
