Add iterators to Connman services.
Change-Id: I4835c50011bb8ba5a34eb9aed34872751bf444ed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,7 @@ dcpd_SOURCES = \
     dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h \
     dcpregs_status.h \
-    connman.c connman_scan.c connman.h \
+    connman.c connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
     dbus_common.c dbus_common.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h dbus_handlers.h
