Incomplete DCP integration of WLAN site survey (#133).
Implementation of registers 104 and 105 has been added, based on the
new WLAN site survey code. A survey can be initiated and valid XML
data is generated from the results.

The remaining problem now is the size of the XML data. We must scatter
that data over several SPI transactions, much like we are doing for
DRCP traffic already (which is handled in a special way). There is
currently no code that does this for regular DCP packets outside of
the DRCP domain. The basic building blocks are already available,
however, and used by the DRCP code; now it is just a matter of finding
a good point where to handle DCP this way as well.

Change-Id: If94242750afbb5a7b9a10602cb1f8d033ea804e9

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,7 +26,7 @@ dcpd_SOURCES = \
     network.h \
     transactions.h dcpdefs.h messages.c messages.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
-    dcpregs_drcp.h dcpregs_networkconfig.h \
+    dcpregs_drcp.h dcpregs_networkconfig.h dcpregs_wlansurvey.h \
     dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h \
     dcpregs_status.h \
@@ -68,6 +68,7 @@ libregisters_la_SOURCES = \
     registers.c registers.h registers_priv.h \
     dcpregs_drcp.c dcpregs_drcp.h \
     dcpregs_networkconfig.c dcpregs_networkconfig.h \
+    dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.c dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.c dcpregs_tcptunnel.h \
     dcpregs_status.h \
@@ -82,7 +83,10 @@ libinifile_la_CFLAGS = $(AM_CFLAGS)
 
 libdbus_handlers_la_SOURCES = \
     dbus_handlers.c dbus_handlers.h \
-    dcpregs_networkconfig.h dcpregs_status.h
+    dcpregs_networkconfig.h \
+    dcpregs_wlansurvey.h \
+    dcpregs_filetransfer.h \
+    dcpregs_status.h
 libdbus_handlers_la_CFLAGS = $(AM_CFLAGS)
 
 nodist_libdcpd_dbus_la_SOURCES = dcpd_dbus.c dcpd_dbus.h
