--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -796,6 +796,7 @@ RECURSIVE              = YES
 EXCLUDE                = \
     @abs_builddir@/src/dcpd_dbus.c \
     @abs_builddir@/src/dbusdl_dbus.c \
+    @abs_builddir@/src/streamplayer_dbus.c \
     @abs_builddir@/src/connman_dbus.c \
     @abs_builddir@/src/logind_dbus.c \
     @abs_srcdir@/dbus_interfaces/de_tahifi_lists_errors.hh \
