--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015  T+A elektroakustik GmbH & Co. KG
+# Copyright (C) 2015, 2016  T+A elektroakustik GmbH & Co. KG
 #
 # This file is part of DCPD.
 #
@@ -52,9 +52,11 @@ test_dynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
 test_registers_la_SOURCES = \
     test_registers.cc \
     ../src/dcpregs_filetransfer_priv.h \
+    ../src/stream_id.h ../src/stream_id.hh \
     mock_dcpd_dbus.hh mock_dcpd_dbus.cc \
     mock_dbus_iface.hh mock_dbus_iface.cc \
     mock_file_transfer_dbus.hh mock_file_transfer_dbus.cc \
+    mock_streamplayer_dbus.hh mock_streamplayer_dbus.cc \
     mock_logind_manager_dbus.hh mock_logind_manager_dbus.cc \
     mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
