--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -43,11 +43,22 @@ check_LTLIBRARIES = \
     test_drcpdcomm.la \
     test_transactions.la \
     test_xmodem.la \
-    test_network_dispatcher.la
+    test_network_dispatcher.la \
+    test_applink.la
 
 test_dynamic_buffer_la_SOURCES = test_dynamic_buffer.c
 test_dynamic_buffer_la_LIBADD = $(top_builddir)/src/libdynamic_buffer.la
 test_dynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
+
+test_applink_la_SOURCES = \
+    test_applink.cc \
+    mock_os.hh mock_os.cc \
+    mock_messages.hh mock_messages.cc
+test_applink_la_LIBADD = \
+    $(top_builddir)/src/libapplink.la \
+    $(top_builddir)/src/libdynamic_buffer.la
+test_applink_la_CFLAGS = $(AM_CFLAGS)
+test_applink_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 test_registers_la_SOURCES = \
     test_registers.cc \
