Integrate Airable security D-Bus interface.
Change-Id: I0c86d415e2086cfd621387882e442ca0c8d139ed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,6 +56,7 @@ noinst_LTLIBRARIES = \
     libdcpd_dbus.la \
     libdbusdl_dbus.la \
     libstreamplayer_dbus.la \
+    libairable_dbus.la \
     libconnman_dbus.la \
     liblogind_dbus.la
 
@@ -115,6 +116,9 @@ libdbusdl_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 nodist_libstreamplayer_dbus_la_SOURCES = streamplayer_dbus.c streamplayer_dbus.h
 libstreamplayer_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
+nodist_libairable_dbus_la_SOURCES = airable_dbus.c airable_dbus.h
+libairable_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
+
 libdrcpdcomm_la_SOURCES = \
     drcp.c drcp.h \
     named_pipe.h \
@@ -154,6 +158,10 @@ BUILT_SOURCES = \
     de_tahifi_streamplayer.h \
     de_tahifi_streamplayer.md \
     streamplayer_dbus.stamp \
+    $(nodist_libairable_dbus_la_SOURCES) \
+    de_tahifi_airable.h \
+    de_tahifi_airable.md \
+    airable_dbus.stamp \
     $(nodist_libconnman_dbus_la_SOURCES) \
     net_connman.h \
     net_connman.md \
@@ -190,6 +198,15 @@ streamplayer_dbus.h: streamplayer_dbus.stamp
 streamplayer_dbus.stamp: $(DBUS_IFACES)/de_tahifi_streamplayer.xml
 	$(GDBUS_CODEGEN) --generate-c-code=streamplayer_dbus --c-namespace tdbus_splay --interface-prefix de.tahifi.Streamplayer. $<
 	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_streamplayer.md -H de_tahifi_streamplayer.h -c tdbus_splay -s de.tahifi.Streamplayer. -n 'Streamplayer'
+	touch $@
+
+de_tahifi_airable.h: airable_dbus.stamp
+de_tahifi_airable.md: airable_dbus.stamp
+airable_dbus.c: airable_dbus.stamp
+airable_dbus.h: airable_dbus.stamp
+airable_dbus.stamp: $(DBUS_IFACES)/de_tahifi_airable.xml
+	$(GDBUS_CODEGEN) --generate-c-code=airable_dbus --c-namespace tdbus --interface-prefix de.tahifi. $<
+	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_airable.md -H de_tahifi_airable.h -c tdbus -s de.tahifi. -n "$(PACKAGE_NAME) (Airable HTTP session security)"
 	touch $@
 
 net_connman.h: connman_dbus.stamp
