--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -68,6 +68,7 @@ test_registers_la_SOURCES = \
     mock_dbus_iface.hh mock_dbus_iface.cc \
     mock_file_transfer_dbus.hh mock_file_transfer_dbus.cc \
     mock_streamplayer_dbus.hh mock_streamplayer_dbus.cc \
+    mock_credentials_dbus.hh mock_credentials_dbus.cc \
     mock_logind_manager_dbus.hh mock_logind_manager_dbus.cc \
     mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
