Add register 1 for SPI protocol level negotiation.
Change-Id: I742f9f5fe5b0bc61fd0f22d636aeb0425a1b6ec0

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,6 +74,7 @@ libdynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
 libregisters_la_SOURCES = \
     registers.c registers.h registers_priv.h \
     dcpregs_drcp.c dcpregs_drcp.h \
+    dcpregs_protolevel.c dcpregs_protolevel.h \
     dcpregs_networkconfig.c dcpregs_networkconfig.h \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.c dcpregs_filetransfer.h dcpregs_filetransfer_priv.h \
