Delete service credentials on demand, log out (#386).
Change-Id: I00f2649e9d09927e6b9ea6a9fc52342eba5a5095

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -88,6 +88,7 @@ libregisters_la_SOURCES = \
     dcpregs_status.h \
     dbusdl_dbus.h \
     stream_id.h \
+    actor_id.h \
     shutdown_guard.h \
     $(DBUS_IFACES)/de_tahifi_lists_errors.h \
     drcp_command_codes.h messages.h
