ConnMan agent can look up passphrases for queries.
We use a new kind of configuration file for this. It is a
configuration file of our own, not seen by ConnMan. Requests are
fulfilled from that configuration file, and data entered by the user
should be written to that file (not implemented this way yet). ConnMan
uses the information read from our own configuration to fill and
manage its own set of configuration files.

This commit adds support for reading our configuration file, but it is
not created or written to yet (implementation was tested by editing
the file on a running system).

Any code for generating configuration files directly for ConnMan or
reading such files is going to be removed from dcpd soon. We are not
going to mess around with ConnMan configuration files anymore.

Change-Id: Ic08bd1959956ba725eebd533b1ad4ef70e9b33f2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,7 +39,8 @@ dcpd_SOURCES = \
     connman_common.c connman_common.h \
     dbus_common.c dbus_common.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h \
-    dbus_handlers.h dbus_handlers_connman_agent.h
+    dbus_handlers.h dbus_handlers_connman_agent.h \
+    connman_agent.h
 
 DBUS_IFACES = $(top_srcdir)/dbus_interfaces
 
@@ -107,6 +108,7 @@ libapplink_la_CFLAGS = $(AM_CFLAGS)
 libdbus_handlers_la_SOURCES = \
     dbus_handlers.c dbus_handlers.h \
     dbus_handlers_connman_agent.c dbus_handlers_connman_agent.h \
+    connman_agent.h \
     connman_dbus.h \
     actor_id.h \
     dcpregs_networkconfig.h \
