Port register code to new network preferences code.
This is a straight port to the new code for writing network
preferences. Unit tests have been ported as well, and they all pass.

Still, this version does not work properly because changes to the
network preferences does not trigger network reconfiguration. That is,
no notification is ever sent to ConnMan, meaning that the new
preferences may only take effect when ConnMan informs us about service
changes, not sooner.

Change-Id: I552f70eb7b9834580d29a77dc071ebc26a302f5b

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -54,6 +54,7 @@ noinst_LTLIBRARIES = \
     libtransactions.la \
     libdynamic_buffer.la \
     libregisters.la \
+    libnetworkprefs.la \
     libinifile.la \
     libapplink.la \
     libdrcpdcomm.la \
@@ -100,6 +101,9 @@ libregisters_la_CFLAGS = $(AM_CFLAGS)
 libinifile_la_SOURCES = inifile.c inifile.h
 libinifile_la_CFLAGS = $(AM_CFLAGS)
 
+libnetworkprefs_la_SOURCES = networkprefs.c networkprefs.h inifile.h
+libnetworkprefs_la_CFLAGS = $(AM_CFLAGS)
+
 libapplink_la_SOURCES = \
     applink.c applink.h \
     applink_variables.c applink_variables.h \
@@ -111,7 +115,7 @@ libdbus_handlers_la_SOURCES = \
     dbus_handlers_connman_agent.c dbus_handlers_connman_agent.h \
     dbus_handlers_connman_manager.c dbus_handlers_connman_manager.h \
     dbus_handlers_connman_manager_data.h \
-    networkprefs.c networkprefs.h \
+    networkprefs.h \
     connman_dbus.h \
     actor_id.h \
     dcpregs_networkconfig.h \
