--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -79,6 +79,7 @@ test_registers_la_LIBADD = \
     $(top_builddir)/src/libregisters.la \
     $(top_builddir)/src/libshutdown_guard.la \
     $(top_builddir)/src/libdynamic_buffer.la \
+    $(top_builddir)/src/libnetworkprefs.la \
     $(top_builddir)/src/libinifile.la \
     $(top_builddir)/src/libxmodem.la
 test_registers_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
@@ -104,6 +105,7 @@ test_transactions_la_SOURCES = \
 test_transactions_la_LIBADD = \
     $(top_builddir)/src/libtransactions.la \
     $(top_builddir)/src/libregisters.la \
+    $(top_builddir)/src/libnetworkprefs.la \
     $(top_builddir)/src/libshutdown_guard.la \
     $(top_builddir)/src/libdynamic_buffer.la
 test_transactions_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
