--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -1971,7 +1971,7 @@ SEARCH_INCLUDES        = YES
 # preprocessor.
 # This tag requires that the tag SEARCH_INCLUDES is set to YES.
 
-INCLUDE_PATH           = @abs_srcdir@ @abs_builddir@
+INCLUDE_PATH           = @abs_srcdir@ @abs_builddir@ @abs_builddir@/src
 
 # You can use the INCLUDE_FILE_PATTERNS tag to specify one or more wildcard
 # patterns (like *.h and *.hpp) to filter out the header-files in the
