--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -795,6 +795,7 @@ RECURSIVE              = YES
 
 EXCLUDE                = \
     @abs_builddir@/src/dcpd_dbus.c \
+    @abs_builddir@/src/configuration_dbus.c \
     @abs_builddir@/src/dbusdl_dbus.c \
     @abs_builddir@/src/debug_dbus.c \
     @abs_builddir@/src/streamplayer_dbus.c \
