Factor out some code to a common file.
Change-Id: I822479239adfd9a80be232ce79173c9cedc3b940

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,7 @@ libdynamic_buffer_la_CFLAGS = $(AM_CFLAGS)
 
 libregisters_la_SOURCES = \
     registers.c registers.h registers_priv.h \
+    dcpregs_common.c dcpregs_common.h \
     dcpregs_drcp.c dcpregs_drcp.h \
     dcpregs_protolevel.c dcpregs_protolevel.h \
     dcpregs_networkconfig.c dcpregs_networkconfig.h \
