--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -803,6 +803,7 @@ EXCLUDE                = \
     @abs_builddir@/src/credentials_dbus.c \
     @abs_builddir@/src/connman_dbus.c \
     @abs_builddir@/src/logind_dbus.c \
+    @abs_srcdir@/dbus_interfaces/de_tahifi_artcache_errors.hh \
     @abs_srcdir@/dbus_interfaces/de_tahifi_lists_errors.hh \
     @abs_srcdir@/dbus_interfaces/*.xml
 
@@ -1991,7 +1992,12 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             = DE_TAHIFI_LISTS_ERRORS_ENUM_NAME:=DBusListsErrorCode DE_TAHIFI_LISTS_ERRORS_ENUM_VALUE(V):="LIST_ERROR_ ## V"
+PREDEFINED             = DE_TAHIFI_LISTS_ERRORS_ENUM_NAME:=DBusListsErrorCode \
+                         DE_TAHIFI_LISTS_ERRORS_ENUM_VALUE(V):="LIST_ERROR_ ## V" \
+                         DE_TAHIFI_ARTCACHE_READ_ERRORS_ENUM_NAME:=DBusArtCacheReadError \
+                         DE_TAHIFI_ARTCACHE_READ_ERRORS_ENUM_VALUE(V):="AC_READ_ERROR_ ## V" \
+                         DE_TAHIFI_ARTCACHE_MONITOR_ERRORS_ENUM_NAME:=DBusArtCacheMonitorError \
+                         DE_TAHIFI_ARTCACHE_MONITOR_ERRORS_ENUM_VALUE(V):="AC_MONITOR_ERROR_ ## V"
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
