First integration of ArtCache D-Bus interfaces.
Non-functional, just showing logs.

Change-Id: Ifca3f3ec09b6bf67b3b644b369b93777c9fd6367

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015, 2016  T+A elektroakustik GmbH & Co. KG
+# Copyright (C) 2015, 2016, 2017  T+A elektroakustik GmbH & Co. KG
 #
 # This file is part of DCPD.
 #
@@ -35,6 +35,7 @@ EXTRA_DIST += \
     dbus_interfaces/de_tahifi_filetransfer.xml \
     dbus_interfaces/de_tahifi_streamplayer.xml \
     dbus_interfaces/de_tahifi_airable.xml \
+    dbus_interfaces/de_tahifi_artcache.xml \
     dbus_interfaces/de_tahifi_credentials.xml \
     dbus_interfaces/net_connman.xml \
     dbus_interfaces/org_freedesktop_login1.xml
